Se agregó el ícono de Google y la imagen personal de Google

--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
                 <li>
                     <a href="">Imágenes</a>
                 </li>
-                <li>
-                    <a href="">Icon</a>
+                <li class="menu-icon">
+                    <a href=""></a>
                 </li>
                 <li>
-                    <a href="">Photo</a>
+                    <a href="">
+                        <img src="https://lh3.googleusercontent.com/ogw/ADGmqu9yKgUEJRIlNpbsINlO9cli8PXiVtggsfwzu8TW=s32-c-mo"
+                            alt="">
+                    </a>
                 </li>
             </ul>
         </nav>
