--- a/index.html
+++ b/index.html
@@ -31,6 +31,28 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="main-logo">
+            <img src="" alt="">
+        </section>
+        <section class="main-input">
+            <div class="main-input-container">
+                <span class="search-icon">
+
+                </span>
+                <input type="text">
+                <a class="micro-icon" href=""></a>
+            </div>
+        </section>
+        <section class="main-buttons">
+            <div>
+                <button>Buscar con Google</button>
+            </div>
+            <div>
+                <button>Me siento con suerte</button>
+            </div>
+        </section>
+    </main>
     <!-- <---code injected by live-server---->
     <script type="text/javascript"></script>
 </body>
