--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     </header>
     <main>
         <section class="main-logo">
-            <img src="" alt="">
+            <img src="https://img.pngio.com/google-logo-2015-png-image-purepng-free-transparent-cc0-png-google-logo-transparent-10000_3382.png"
+                alt="">
         </section>
         <section class="main-input">
             <div class="main-input-container">
